# mozilla-bank-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
bank/: config.py  crud.py  database.py  main.py  models.py  schemas.py
bank/envs/: dev.env  test.env
database/: db-init.sql
database_configs/: db-init.sql
tests/: test_app.py  test_schemas.py
